2005-31-03 Aaron Faupell <afaupell@users.sourceforge.net>

	* ini.tcl: fixed bug where ini files were corrupted when
                   saving a shorter version. due to not closing
                   and truncating file before writing.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-03-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* inifile.test: Fixed [Tcllib SF Bug 899204] by (a) rewriting all
	  tests to be completely independent of each other and (b)
	  changing the mode when opening the test file to 'r'. It should
	  be noted that the write facilities of the module are not covered
	  by the testsuite. That is unfortunate.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* inifile.test: It was easier to make this package useable for Tcl
	* ini.tcl:      8.2 than excluding it from test for versions of Tcl
	* ini.man:      before 8.4. So that was done.

2003-07-15  Andreas Kupries  <andreask@pliers.activestate.com>

	* ini.tcl: Got a rewritten system from Aaron.
	* ini.man: Updated the documentation.

	* infile.test: New testsuite for module.
	* test.ini:

2003-07-04  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ini.tcl: Added a comment header for RCS id, copyright notices,
	  etc. Slight reformatting of the code. Slight code changes to
	  make 'procheck' complain less (proper import of variables into
	  the scope).

	  Documented possible bug.